[package]
name = "mango-v3-reimbursement"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_v3_reimbursement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["development"] # `anchor build -- --no-default-features --features production` to override
production = []
development = []
test-bpf = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = { version = "0.24.2" }
solana-program = "^1.9.29"
static_assertions = "1.1"

